[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-proxy"
authors = [
    {name= "18870"}
]
requires-python = ">=3.8"
version = "0.2.5"
readme = "README.md"
dependencies = [
    "httpx",
    "fastapi",
    "uvicorn",
    "pydantic[dotenv]"
]
description = "Reverse proxy for OpenAI chatgpt website API"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools.package-dir]
chatgpt_proxy = "chatgpt_proxy"